a couple spacing fixes

--- a/_less/feathers.less
+++ b/_less/feathers.less
@@ -62,6 +62,10 @@ code {
     margin-bottom: 1em;
   }
 
+  h5 {
+    margin-top: 2em;
+  }
+
   img.ship-it {
     display: table;
     height: 300px;
@@ -124,7 +128,11 @@ code {
 
 #comparison {
   img {
-    margin: 0px auto;
+    margin: 50px auto;
+  }
+
+  h5 {
+    margin: 1em 0;
   }
 }
 
